frontend/src/components/matchhistory.module.css
.matchContainer {
  color: #f0d287;
  /* font-weight: bold; */
  width: 770px;
  height: 900px;
  display: flex;
  flex-direction: column;
  font-size: 13px;
}

.matchContainer h1 {
  text-align: center;
  font-size: 32px;
}

.cardContainerWin {
  display: flex;
  flex-direction: row;
  margin: 10px 0;
  justify-content: initial;
  align-items: center;
  background: #494c4e;
  border-radius: 2px;
  margin: 2px 0;
  padding: 5px;
}

.cardContainerLose {
  display: flex;
  flex-direction: row;
  margin: 10px 0;
  justify-content: initial;
  align-items: center;
  background: #494c4e;
  border-radius: 2px;
  margin: 2px 0;
  padding: 5px;
}

@media (max-width: 768px) {
  .matchContainer {
    color: #f0d287;
    max-width: 360px;
    height: auto;
    display: flex;
    flex-direction: column;
    font-size: 13px;
    align-items: center;
  }

  .cardContainerLose {
    display: flex;
    flex-direction: column;
    margin: 10px 0;
    justify-content: initial;
    align-items: center;
    background: #494c4e;
    border-radius: 2px;
    margin: 2px 0;
    padding: 5px;
  }

  .cardContainerWin {
    display: flex;
    flex-direction: column;
    margin: 10px 0;
    justify-content: initial;
    align-items: center;
    background: #494c4e;
    border-radius: 2px;
    margin: 3px 0;
    padding: 5px;
  }
}

.firstCard {
  display: flex;
  flex-direction: column;
  justify-content: center;
  text-align: center;
  margin: 0 7px;
}

.firstCard p {
  margin: 0;
  min-width: 110px;
}

.win {
  color: rgb(82, 179, 82);
}

.loss {
  color: rgb(196, 92, 92);
}

.secondCard {
  display: flex;
  flex-direction: column;
  text-align: center;
  align-items: center;
  justify-content: center;
  margin-right: 7px;
}

.imageContainer {
  display: flex;
  padding-top: 6px;
  align-items: center;
}

.championImg {
  display: inline-block;
  margin-bottom: 0;
}

.championImage {
  border-radius: 8px;
  border: solid 2px #f0d287;
  width: 50px;
  height: auto;
}

.summonerSpellContainer {
  display: flex;
  flex-direction: column;
}

.summonerSpell {
  width: 30px;
  height: auto;
  margin-left: 4px;
  margin-bottom: 4px;
  border-radius: 3px;
}

.summonerSpell2 {
  width: 30px;
  height: auto;
  margin-left: 4px;
  border-radius: 3px;
}

.championName {
  font-weight: bold;
  text-align: center;
  margin-top: 2px;
  min-width: 80px;
}

.thirdCard {
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  text-align: center;
  margin-right: 7px;
  min-width: 80px;
}

.fourthCard {
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  text-align: center;
  margin-right: 7px;
}

.fifthCard {
  display: flex;
  flex-direction: column;
  margin-right: 7px;
}

.sixthCard {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: initial;
  max-width: 100;
  margin-right: 3px;
}

.sixthCard img {
  width: 20px;
  height: auto;
  margin: 1px 3px 1px 1px;
}

.sixthCard img:hover {
  cursor: pointer;
}

.sixthCard span {
  overflow: hidden;
  text-overflow: ellipsis;
  width: 80px;
  max-height: 20px;
}

.sixthCard span:hover {
  cursor: url(https://cur.cursors-4u.net/games/gam-14/gam1334.cur), auto !important;
}

.seventhCard {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: initial;
  max-width: 100;
}

.seventhCard img {
  width: 20px;
  height: auto;
  margin: 1px 3px 1px 1px;
}

.seventhCard img:hover {
  cursor: pointer;
}

.seventhCard span {
  overflow: hidden;
  text-overflow: ellipsis;
  width: 80px;
  max-height: 20px;
}

.seventhCard span:hover {
  cursor: url(https://cur.cursors-4u.net/games/gam-14/gam1334.cur), auto !important;
}

.col {
  display: flex;
  justify-content: initial;
  align-items: center;
}

.cardContainer {
  display: flex;
  flex-direction: row;
}

@media (max-width: 768px) {
  .firstCard,
  .secondCard,
  .thirdCard,
  .fourthCard,
  .fifthCard,
  .sixthCard,
  .seventhCard {
    margin: 8px 8px;
  }
  .cardContainer {
    align-items: center;
  }
}

